<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/blue"
    android:layout_height="match_parent"
    tools:context=".presentation.MainActivity">

    <EditText
        android:id="@+id/editTextCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:hint="@string/edit_text_city"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewLocation"
        android:layout_height="40dp"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextCity"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:background="@color/orange"
        android:gravity="center"
        android:text="@string/text_view_get_location"
        android:layout_marginStart="15dp"
        android:textStyle="bold"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp" />

    <TextView
        android:id="@+id/textViewFind"
        android:layout_height="40dp"
        android:layout_width="match_parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textColor="@color/white"
        android:background="@color/orange"
        android:gravity="center"
        android:text="@string/button_find_weather"
        android:layout_marginStart="15dp"
        android:textStyle="bold"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="10dp" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewWeather"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewFind"
        android:layout_marginTop="200dp"
        tools:itemCount="14"
        tools:listitem="@layout/weather_item" />

</androidx.constraintlayout.widget.ConstraintLayout>